kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: famehub
  labels:
    name: famehub
